# Drystal

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NEWS  README  README.md  Tupfile  Tuprules.tup  game.lua  included_files.txt  install.sh  pong.lua  repacker.py  runner.py  server.c
cmake/: BuildCoverage.cmake  Emscripten.cmake  GenerateLuaFiles.cmake  Utils.cmake
config/: native.config  web.config
data/: CMakeLists.txt  draw.lua  drystal.lua  game.lua  net.lua  particle.lua  pong.lua  state.lua  truetype.lua  web.lua
doc/: Makefile  README.md  api.rst  conf.py  example1.lua  index.rst  index.txt
doc/man/: CMakeLists.txt  drystal.1.xml  drystal.xsl
doc/site/: api.rst  index.rst  resources.rst  tutorials.rst
doc/site/tutorials/: basics.lua  basics.rst
doc/tutorials/: basics.lua  basics.rst
extensions/: CMakeLists.txt  Tuprules.tup
extensions/net/: CMakeLists.txt  Tupfile  main.cpp  network.cpp  network.hpp  websocket.c  websocket.h
extensions/particle/: CMakeLists.txt  main.cpp
extensions/physic/: CMakeLists.txt  Tupfile  main.cpp
extensions/storage/: CMakeLists.txt  Tupfile  cjson.patch  main.cpp
extensions/truetype/: CMakeLists.txt  Tupfile  font.cpp  font.hpp  main.cpp  parser.cpp  parser.hpp  stb_truetype.h
extensions/web/: CMakeLists.txt  Tupfile  main.cpp
man/: CMakeLists.txt  drystal.1.xml
misc/shell-completion/zsh/: CMakeLists.txt  _drystal  _drystaljs
spec/: audio_spec.moon  buffer_spec.moon  camera_spec.lua  camera_spec.moon  color_spec.lua  color_spec.moon  display_spec.moon  storage_spec.moon  surface_spec.moon  tools.moon
src/: CMakeLists.txt  Tupfile  all_api  all_api.hpp  audio.cpp  audio.hpp  buffer.cpp  buffer.hpp  build.h  display.cpp  display.hpp  display_buffer.cpp  display_buffer.hpp  dlua.c  dlua.h  draw.lua  drawable.cpp  drawable.hpp  drystal.lua  emscripten.h  engine.c  engine.cpp  engine.h  engine.hpp  event.cpp  event.hpp  file.cpp  file.hpp  gamestate.hpp  livecoding.h  livecoding_linux.c  log.c  log.h  log.hpp  lua_functions.cpp  lua_functions.hpp  lua_util.c  lua_util.cpp  lua_util.h  lua_util.hpp  (+34 more)
src/audio/: api.c  api.cpp  api.hpp  audio.c  audio.cpp  audio.h  audio.hpp  audio_bind.c  audio_bind.cpp  audio_bind.h  audio_bind.hpp  audiomanager.cpp  audiomanager.hpp  bind.cpp  music.c  music.cpp  music.h  music.hpp  music_bind.c  music_bind.cpp  music_bind.h  music_bind.hpp  sound.c  sound.cpp  sound.h  sound.hpp  sound_bind.c  sound_bind.cpp  sound_bind.h  sound_bind.hpp
src/event/: api.c  api.cpp  api.hpp  event.c  event.cpp  event.h  event.hpp  event_bind.c  event_bind.cpp  event_bind.h  event_bind.hpp
src/font/: api.c  api.h  font.c  font_bind.c  font_bind.h  parser.c  parser.h
src/game/: entity.cpp  entity.hpp  gameimpl.cpp  gameimpl.hpp  menu.cpp  menu.hpp
src/graphics/: api.c  api.cpp  api.h  api.hpp  buffer.c  buffer.cpp  buffer.h  buffer.hpp  buffer_bind.c  buffer_bind.cpp  buffer_bind.h  buffer_bind.hpp  camera.c  camera.cpp  camera.h  camera.hpp  camera_bind.c  camera_bind.cpp  camera_bind.h  camera_bind.hpp  colors.lua  display.c  display.cpp  display.h  display.hpp  display_bind.c  display_bind.cpp  display_bind.h  display_bind.hpp  draw.lua  opengl_util.c  opengl_util.h  postfx.lua  shader.c  shader.cpp  shader.h  shader.hpp  shader_bind.c  shader_bind.cpp  shader_bind.h  (+6 more)
src/net/: api.cpp  api.hpp  net.cpp  net.lua  server.cpp  server.hpp  server_bind.cpp  server_bind.hpp  socket.cpp  socket.hpp  socket_bind.cpp  socket_bind.hpp
src/particle/: api.c  api.cpp  api.h  api.hpp  particle.c  particle.cpp  particle.h  particle.hpp  particle.lua  system.c  system.cpp  system.h  system.hpp  system_bind.c  system_bind.cpp  system_bind.h  system_bind.hpp
src/physic/: api  api.cpp  api.hpp  body_bind.cpp  body_bind.hpp  joint_bind.cpp  joint_bind.hpp  physic.cpp  physic_p.cpp  physic_p.hpp  shape_bind.cpp  shape_bind.hpp  world_bind.cpp  world_bind.hpp
src/physics/: api.cpp  api.hpp  body_bind.cpp  body_bind.hpp  joint_bind.cpp  joint_bind.hpp  raycast.lua  shape_bind.cpp  shape_bind.hpp  world_bind.cpp  world_bind.hpp
src/storage/: api.c  api.cpp  api.h  api.hpp  storage.c  storage.cpp  storage.h  storage.hpp  storage_bind.c  storage_bind.cpp  storage_bind.h  storage_bind.hpp
src/truetype/: api.c  api.cpp  api.h  api.hpp  font.c  font.cpp  font.h  font.hpp  font_bind.c  font_bind.cpp  font_bind.hpp  parser.c  parser.cpp  parser.h  parser.hpp  truetype.cpp  truetype.lua
src/utils/: api.c  api.cpp  api.h  api.hpp
src/web/: api.c  api.cpp  api.h  api.hpp  web.c  web.cpp  web.hpp  web.lua  web_bind.c  web_bind.cpp  web_bind.h  web_bind.hpp
tests/: colorprint.lua  drystal.cfg  image.json  index.html
tests/audio/: create.lua  play.lua  test_play.lua
tests/audio/random/: drystal.cfg  main.lua
tests/display/: buffer.lua  camera.lua  dkjson.lua  draw_point.lua  draw_polygon.lua  fx.lua  npot.lua  perf.lua  precise.lua  shaders.lua  show_logo.lua  sprites.lua  surface_manipulations.lua
tests/event/: hooks.lua  pointer.lua  unicode.lua
tests/font/: line.lua  parser.lua  position.lua  simple_draw.lua
tests/games/: draw.lua  pong.lua  shoot.lua
tests/graphics/: buffer.lua  camera.lua  colors.lua  draw_point.lua  draw_polygon.lua  filter.lua  fullscreen.lua  fx.lua  line.lua  npot.lua  perf.lua  precise.lua  read.lua  shaders.lua  sprites.lua  surface_manipulations.lua  title.lua
tests/lights/: main.lua
tests/misc/: compute_perf.lua  engine_stop.lua  fps.lua  hooks.lua  livecode.lua  livecode2.lua  objects.lua  pointer.lua  relative.lua  unicode.lua
tests/net/: client.lua  common.lua  server.lua
tests/network/: client.lua  common.lua  server.lua  test_network.lua
tests/particle/: blood.lua  fire.lua  simple.lua  smoke.lua
tests/physic/: ball.lua  colorprint.lua
tests/physics/: ball.lua  destroy.lua
tests/storage/: main.lua
tests/ttf/: line.lua  position.lua  simple_draw.lua  test_draw.lua
tests/web/: js.lua  wget.lua
tools/: CMakeLists.txt  builder.py  busted  drystal.supp  drystaljs.py  runner.py  setup_busted.sh  testhub.py  unittest.lua
(+19 files in other folders)
